--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 	<div class="game">
-		<div id="dino"></div>
-		<div id="cactus"></div>
+			<div id="dino"><img src="/img/dino.png" alt=""></div>
+		<div id="cactus"><img src="/img/cactus.png" alt=""></div>
 	</div>
 <script src="script.js"></script>
 </body>
